--- a/app/globals.css
+++ b/app/globals.css
@@ -93,7 +93,7 @@
     );
     color: white;
     font-weight: 500;
-    padding: 0.625rem 1.25rem;
+    padding: 0.4rem 1.25rem;
     border-radius: 0.5rem;
     transition: all 0.3s;
   }
@@ -106,7 +106,7 @@
     );
   }
 
-  .wallet-adapter-button {
+ .custom-wallet-ui .wallet-adapter-button {
   background-image: linear-gradient(
     to right,
     var(--solana-purple),
